[package]
name = "echo"
version = "0.1.0"
authors = ["Kaichao Sun <kaichaosuna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.34.0"
wasm-timer = "0.2.4"
futures = "0.3.1"
void = "1"
log = "0.4"
rand = "0.7"
env_logger = "0.8.2"
async-std = "1.7.0"